[STREAMPIPES-449] Add test for rate limit processor

--- a/ui/src/app/core-ui/static-properties/static-alternatives/static-alternatives.component.html
+++ b/ui/src/app/core-ui/static-properties/static-alternatives/static-alternatives.component.html
@@ -26,7 +26,7 @@
                                   [value]="alternative"
                                   [checked]="alternative.selected"
                                   [matTooltip]="alternative.description"
-                                  [attr.data-cy]="alternative.label">
+                                  [attr.data-cy]="staticProperty.internalName.replace(' ',  '_').toLowerCase() + '-' + alternative.label.replace(' ',  '_').toLowerCase()">
                     <label style="font-weight: normal;">
                         {{alternative.label}}
                     </label>
