--- a/ui/src/app/core-ui/static-properties/static-one-of-input/static-one-of-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-one-of-input/static-one-of-input.component.html
@@ -26,7 +26,7 @@
                                       [value]="option"
                                       (click)="select(option.elementId)"
                                       [checked]="option.selected"
-                                      [attr.data-cy]="staticProperty.internalName + option.name">
+                                      [attr.data-cy]="staticProperty.internalName.replace(' ',  '_').toLowerCase() + '-' + option.name.replace(' ',  '_').toLowerCase()">
                         <label style="font-weight: normal">
                             {{option.name}}
                         </label>
