[STREAMPIPES-483] Provide E2E tests for preprocessing rules within the adapter

--- a/ui/src/app/connect/components/schema-editor/schema-editor-header/schema-editor-header.component.html
+++ b/ui/src/app/connect/components/schema-editor/schema-editor-header/schema-editor-header.component.html
@@ -19,18 +19,27 @@
 <div fxLayout="row">
     <div fxLayoutAlign="space-between center" class="add-schema" fxFlex="0 1 100%">
         <div>
-            <button color="primary" mat-button (click)=addNestedProperty()>
+            <button color="primary"
+                    mat-button
+                    data-cy="connect-add-nested-property"
+                    (click)=addNestedProperty()>
                 <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
             </button>
-            <button color="primary" mat-button
+            <button color="primary"
+                    mat-button
+                    data-cy="connect-add-static-property"
                     (click)="addStaticValueProperty()">
                 <mat-icon matTooltip="Add a static value to event">add</mat-icon>
             </button>
-            <button color="primary" mat-button
+            <button color="primary"
+                    mat-button
+                    data-cy="connect-add-timestamp-property"
                     (click)=addTimestampProperty()>
                 <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
             </button>
-            <button color="primary" mat-button (click)=guessSchema()>
+            <button color="primary"
+                    mat-button
+                    (click)=guessSchema()>
                 <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
             </button>
             <!--            <button color="primary" mat-button (click)=togglePreview()>-->
