--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -43,8 +43,15 @@
                     *ngIf="isError">
             </sp-error-message>
 
-            <div *ngIf="!isError && !isLoading" fxLayout="column" fxLayoutAlign="space-evenly stretched" class="drag-drop-tree" data-cy="sp-connect-schema-editor">
-                <tree-root #tree [nodes]="nodes" [options]="options" (updateData)="onUpdateData(tree)">
+            <div *ngIf="!isError && !isLoading"
+                 fxLayout="column"
+                 fxLayoutAlign="space-evenly stretched"
+                 class="drag-drop-tree"
+                 data-cy="sp-connect-schema-editor">
+                <tree-root #tree
+                           [nodes]="nodes"
+                           [options]="options"
+                           (updateData)="onUpdateData(tree)">
                     <ng-template #treeNodeTemplate let-node let-index="index">
                         <event-property-row
                                 [node]="node"
