--- a/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
@@ -27,7 +27,11 @@
       </div>
       <div attr.id="input-runtime-name-{{cachedProperty.label}}" class="form-group" fxFlexAlign="center">
         <mat-form-field class="example-full-width" color="accent">
-          <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename"
+          <input matInput
+                 placeholder="RuntimeName"
+                 name="runtimename"
+                 id="runtimename"
+                 data-cy="connect-edit-field-runtime-name"
             [(ngModel)]="cachedProperty.runtimeName">
         </mat-form-field>
       </div>
