--- a/ui/src/app/connect/components/schema-editor/schema-editor-header/schema-editor-header.component.html
+++ b/ui/src/app/connect/components/schema-editor/schema-editor-header/schema-editor-header.component.html
@@ -34,7 +34,8 @@
             <button color="primary"
                     mat-button
                     data-cy="connect-add-timestamp-property"
-                    (click)=addTimestampProperty()>
+                    (click)=addTimestampProperty()
+                    data-cy="connect-schema-add-timestamp-btn">
                 <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
             </button>
             <button color="primary"
@@ -53,8 +54,12 @@
                 </sp-error-hint>
 
 
-            <button style="padding-right:0" color="primary" mat-button [disabled]="countSelected == 0"
-                    (click)="removeSelectedProperties()">
+            <button style="padding-right:0"
+                    color="primary"
+                    mat-button
+                    [disabled]="countSelected == 0"
+                    (click)="removeSelectedProperties()"
+                    data-cy="connect-schema-delete-properties-btn">
                 <mat-icon matTooltip="Remove selected Properties">delete</mat-icon>
             </button>
         </div>
