--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-correction-value/edit-correction-value.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-correction-value/edit-correction-value.component.html
@@ -19,7 +19,12 @@
 <div fxLayout="row" fxLayoutAlign="start">
         <div class="form-group" fxFlexAlign="center">
         <mat-form-field class="example-full-width" style="margin-right: 10px" color="accent">
-            <input matInput name="correction" placeholder="Correction Value" [(ngModel)]="cachedProperty.correctionValue" (change)="valueChanged()">
+            <input matInput
+                   name="correction"
+                   placeholder="Correction Value"
+                   [(ngModel)]="cachedProperty.correctionValue"
+                   (change)="valueChanged()"
+                    data-cy="connect-schema-correction-value">
         </mat-form-field>
     </div>
     <div class="form-group" fxFlexAlign="center">
@@ -29,7 +34,8 @@
                     placeholder="Math Operator"
                     [(ngModel)]="cachedProperty.operator"
                     (selectionChange)="valueChanged()"
-                    [disabled]="!cachedProperty.correctionValue">
+                    [disabled]="!cachedProperty.correctionValue"
+                    data-cy="connect-schema-correction-operator">
                 <mat-option [value]="op.value" *ngFor="let op of operators">
                     {{ op.viewValue }}
                 </mat-option>
