--- a/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
@@ -24,7 +24,9 @@
                     <h4>{{pages[0].description}}</h4>
                     <mat-list>
                         <mat-list-item *ngFor="let pipeline of visualizablePipelines"
-                                       (click)="selectPipeline(pipeline)" class="list-item">
+                                       (click)="selectPipeline(pipeline)"
+                                       class="list-item"
+                                        [attr.data-cy]="'dashboard-visualize-pipeline-' + pipeline.pipelineName">
                             <div mat-list-avatar
                                  class="pipeline-avatar sp-accent-bg">{{iconText(pipeline.visualizationName)}}
                             </div>
@@ -39,7 +41,9 @@
                     <h4>{{pages[1].description}}</h4>
                     <mat-list>
                         <mat-list-item *ngFor="let widget of availableWidgets"
-                                       (click)="selectWidget(widget)" class="list-item">
+                                       (click)="selectWidget(widget)"
+                                       class="list-item"
+                                       [attr.data-cy]="'dashboard-select-widget-' + widget.widgetName">
                             <div mat-list-avatar
                                  class="pipeline-avatar sp-accent-bg">
                                 <span *ngIf="!widget.widgetIconName">{{iconText(widget.widgetLabel)}}</span>
@@ -76,8 +80,10 @@
         <button mat-button mat-raised-button class="mat-basic mr-10" (click)="back()" *ngIf="(!('select-pipeline'===page))">
             Back
         </button>
-        <button mat-button mat-raised-button color="accent" (click)="next()" [disabled]="'configure-widget' === page
-         && !formValid">
+        <button mat-button mat-raised-button color="accent"
+                (click)="next()"
+                [disabled]="'configure-widget' === page && !formValid"
+                data-cy="dashboard-new-widget-next-btn">
             <span *ngIf="!editMode && 'configure-widget' === page">Create</span>
             <span *ngIf="editMode && 'configure-widget' === page">Save</span>
             <span *ngIf="editMode == null && !('configure-widget' === page)">Next</span>
