--- a/ui/src/app/app-asset-monitoring/dialog/save-dashboard/save-dashboard-dialog.component.html
+++ b/ui/src/app/app-asset-monitoring/dialog/save-dashboard/save-dashboard-dialog.component.html
@@ -37,10 +37,16 @@
     </div>
     <mat-divider></mat-divider>
     <div class="sp-dialog-actions">
-        <button mat-button mat-raised-button class="mat-basic mr-10" (click)="cancel()">
+        <button mat-button
+                mat-raised-button
+                class="mat-basic mr-10"
+                (click)="cancel()">
             Cancel
         </button>
-        <button mat-button mat-raised-button color="accent" (click)="save()">
+        <button mat-button
+                mat-raised-button
+                color="accent"
+                (click)="save()">
             Save
         </button>
     </div>
