Updated a few more

--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -18,7 +18,7 @@
 
 @import './_variables';
 
-@import '~angular-tree-component/dist/angular-tree-component.css';
+@import '~@circlon/angular-tree-component/css/angular-tree-component.css';
 //@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~datatables.net-dt/css/jquery.dataTables.css';
 @import '~bootstrap/dist/css/bootstrap.css';
