[STREAMPIPES-496] Properly update welcome tour display status

--- a/ui/src/app/editor/dialog/welcome-tour/welcome-tour.component.html
+++ b/ui/src/app/editor/dialog/welcome-tour/welcome-tour.component.html
@@ -30,7 +30,7 @@
                 <b>{{appConstants.APP_NAME}} is your self-service toolbox for real-time analytics.</b>
                 <p>If you are using {{appConstants.APP_NAME}} for the first time, we recommend taking the interactive tour!</p>
             </div>
-            <button mat-button mat-raised-button color="primary" (click)="startCreatePipelineTour()">Start Tour</button>
+            <button mat-button mat-raised-button color="accent" (click)="startCreatePipelineTour()">Start Tour</button>
         </div>
     </div>
     <mat-divider></mat-divider>
