[STREAMPIPES-499] Bump Jsplumb dependency and migrate code

--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
@@ -121,8 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div id="assembly" class="canvas" #assembly>
-                <pipeline #pipelineComponent
+                <pipeline class="canvas jtk-surface" id="assembly" #pipelineComponent
                           [pipelineValid]="pipelineValid"
                           [canvasId]="'assembly'"
                           [rawPipelineModel]="rawPipelineModel"
@@ -132,9 +131,8 @@
                           [pipelineCanvasMetadata]="pipelineCanvasMetadata"
                           [pipelineCacheRunning]="pipelineCacheRunning"
                           (pipelineCachedChanged)="pipelineCached=$event"
-                          (pipelineCacheRunningChanged)="pipelineCacheRunning=$event">
+                          (pipelineCacheRunningChanged)="pipelineCacheRunning=$event" style="position:absolute;">
                 </pipeline>
-            </div>
         </div>
     </div>
 </div>
