--- a/ui/src/app/editor/components/pipeline/pipeline.component.html
+++ b/ui/src/app/editor/components/pipeline/pipeline.component.html
@@ -16,43 +16,45 @@
   ~
   -->
 
-<div style="z-index: 1" [ngStyle]="{width: canvasWidth, height: canvasHeight}" #outerCanvas>
-    <span id="{{pipelineElement.payload.dom}}" style="{{getElementCss(pipelineElement.settings)}}"
-          (click)="updateOptionsClick(pipelineElement.payload.dom)"
-          (mouseenter)="updateMouseover(pipelineElement.payload.dom)"
-          (mouseleave)="updateMouseover('')"
-          *ngFor="let pipelineElement of rawPipelineModel | enabledPipelineElement">
-        <span style="z-index:5;"
-              [ngClass]="getElementCssClasses(pipelineElement)">
-            <div class="pipeline-element-progress-container sp-fade" *ngIf="pipelineElement.settings.loadingStatus">
-                 <mat-spinner [mode]="'indeterminate'" class="pipeline-element-progress" [diameter]="40" color="accent"></mat-spinner>
-            </div>
-            <div class="pipeline-element-loading-container sp-fade-opacity"
-                 *ngIf="pipelineElement.settings.loadingStatus"></div>
-            <div class="pipeline-element-configuration-invalid {{pipelineElement.type === 'stream' ? 'pi-stream' : 'pi-processor'}}"
-                 *ngIf="!pipelineElement.settings.completed">
-                <i class="material-icons pipeline-element-configuration-invalid-icon">
+<div [attr.data-jtk-managed]="pipelineElement.payload.dom"
+     id="{{pipelineElement.payload.dom}}"
+     style="{{getElementCss(pipelineElement.settings)}}"
+     (click)="updateOptionsClick(pipelineElement.payload.dom)"
+     (mouseenter)="updateMouseover(pipelineElement.payload.dom)"
+     (mouseleave)="updateMouseover('')"
+     *ngFor="let pipelineElement of rawPipelineModel | enabledPipelineElement" class="sp-no-pan">
+    <div style="z-index:5;"
+         [ngClass]="getElementCssClasses(pipelineElement)">
+        <div class="pipeline-element-progress-container sp-fade" *ngIf="pipelineElement.settings.loadingStatus">
+            <mat-spinner [mode]="'indeterminate'" class="pipeline-element-progress" [diameter]="40"
+                         color="accent"></mat-spinner>
+        </div>
+        <div class="pipeline-element-loading-container sp-fade-opacity"
+             *ngIf="pipelineElement.settings.loadingStatus"></div>
+        <div class="pipeline-element-configuration-invalid {{pipelineElement.type === 'stream' ? 'pi-stream' : 'pi-processor'}}"
+             *ngIf="!pipelineElement.settings.completed">
+            <i class="material-icons pipeline-element-configuration-invalid-icon">
                 warning
-                </i>
-            </div>
-            <pipeline-element [pipelineElement]="pipelineElement.payload" [preview]="preview"></pipeline-element>
-        </span>
-         <pipeline-element-options *ngIf="!preview" (delete)="handleDeleteOption($event)"
-                                   (customize)="showCustomizeDialog($event)"
-                                   [currentMouseOverElement]="currentMouseOverElement"
-                                   [pipelineValid]="pipelineValid"
-                                   [allElements]="allElements"
-                                   [pipelineElement]="pipelineElement"
-                                   [rawPipelineModel]="rawPipelineModel"
-                                   [pipelineElementId]="(pipelineElement.type == 'stream' || pipelineElement.type == 'set') ? pipelineElement.payload.elementId : pipelineElement.payload.belongsTo"
-                                   [internalId]="pipelineElement.payload.dom"
-                                   [attr.data-cy]="'sp-pe-menu-' + pipelineElement.payload.name.toLowerCase().replaceAll(' ', '_')">
-        </pipeline-element-options>
-        <pipeline-element-preview *ngIf="previewModeActive && (pipelinePreview.supportedPipelineElementDomIds.indexOf(pipelineElement.payload.dom) > -1)"
-                                  [previewId]="pipelinePreview.previewId"
-                                  [pipelineElementDomId]="pipelineElement.payload.dom">
+            </i>
+        </div>
+        <pipeline-element [pipelineElement]="pipelineElement.payload" [preview]="preview"></pipeline-element>
+    </div>
+    <pipeline-element-options *ngIf="!preview" (delete)="handleDeleteOption($event)"
+                              (customize)="showCustomizeDialog($event)"
+                              [currentMouseOverElement]="currentMouseOverElement"
+                              [pipelineValid]="pipelineValid"
+                              [allElements]="allElements"
+                              [pipelineElement]="pipelineElement"
+                              [rawPipelineModel]="rawPipelineModel"
+                              [pipelineElementId]="(pipelineElement.type == 'stream' || pipelineElement.type == 'set') ? pipelineElement.payload.elementId : pipelineElement.payload.belongsTo"
+                              [internalId]="pipelineElement.payload.dom"
+                              [attr.data-cy]="'sp-pe-menu-' + pipelineElement.payload.name.toLowerCase().replaceAll(' ', '_')">
+    </pipeline-element-options>
+    <pipeline-element-preview
+            *ngIf="previewModeActive && (pipelinePreview.supportedPipelineElementDomIds.indexOf(pipelineElement.payload.dom) > -1)"
+            [previewId]="pipelinePreview.previewId"
+            [pipelineElementDomId]="pipelineElement.payload.dom">
 
-        </pipeline-element-preview>
-    </span>
+    </pipeline-element-preview>
 </div>
 
