[hotfix] Improve icon handling of pipeline elements

--- a/ui/src/app/editor/components/pipeline-element/pipeline-element.component.html
+++ b/ui/src/app/editor/components/pipeline-element/pipeline-element.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<img src="{{iconUrl}}" *ngIf="showImage" style="{{iconSizeCss()}}">
+<img [src]="image" *ngIf="showImage" style="{{iconSizeCss()}}">
 <span *ngIf="!showImage" class="element-text-icon">
             {{iconText}}
 </span>
