[hotfix] Modify button style in pipeline notifications dialog

--- a/ui/src/app/pipelines/dialog/pipeline-notifications/pipeline-notifications.component.html
+++ b/ui/src/app/pipelines/dialog/pipeline-notifications/pipeline-notifications.component.html
@@ -28,7 +28,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="sp-dialog-actions actions-align-right">
-        <button mat-button mat-raised-button color="primary" (click)="acknowledgeAndClose()">
+        <button mat-button mat-raised-button color="accent" (click)="acknowledgeAndClose()">
             Acknowledge
         </button>
     </div>
