[hotfix] Fix button style in start all pipelines dialog

--- a/ui/src/app/pipelines/dialog/start-all-pipelines/start-all-pipelines-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/start-all-pipelines/start-all-pipelines-dialog.component.html
@@ -42,7 +42,7 @@
         <button mat-button mat-raised-button class="mat-basic" (click)="close(false)" style="margin-right:10px;">
             Cancel
         </button>
-        <button mat-button mat-raised-button color="primary" [disabled]="installationRunning" (click)="next()">
+        <button mat-button mat-raised-button color="accent" [disabled]="installationRunning" (click)="next()">
             {{nextButton}}
         </button>
     </div>
