[STREAMPIPES-504] Improve rendering of runtime-resolvable properties

--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -25,11 +25,11 @@
         </div>
         <div fxFlex="100">
             <sp-static-code-input *ngIf="isCodeInputStaticProperty(staticProperty)"
-                                   [staticProperty]="staticProperty"
-                                   [parentForm]="parentForm"
-                                   [eventSchemas]="eventSchemas"
-                                   [fieldName]="fieldName"
-                                   (updateEmitter)="emitUpdate($event)">
+                                  [staticProperty]="staticProperty"
+                                  [parentForm]="parentForm"
+                                  [eventSchemas]="eventSchemas"
+                                  [fieldName]="fieldName"
+                                  (updateEmitter)="emitUpdate($event)">
             </sp-static-code-input>
 
             <app-static-secret-input *ngIf="isSecretStaticProperty(staticProperty)"
@@ -152,8 +152,20 @@
                                     [displayRecommended]="displayRecommended"
                                     [staticProperty]="staticProperty" class="test fullWidth"
                                     (updateEmitter)="emitUpdate($event)">
-
             </sp-static-slide-toggle>
+            <sp-runtime-resolvable-tree-input
+                    *ngIf="isTreeInputStaticProperty(staticProperty)"
+                    [adapterId]="adapterId"
+                    [parentForm]="parentForm"
+                    [completedStaticProperty]="completedStaticProperty"
+                    [pipelineElement]="pipelineElement"
+                    [eventSchemas]="eventSchemas"
+                    [staticProperties]="staticProperties"
+                    [fieldName]="fieldName"
+                    [displayRecommended]="displayRecommended"
+                    [staticProperty]="staticProperty" class="test fullWidth"
+                    (updateEmitter)="emitUpdate($event)">
+            </sp-runtime-resolvable-tree-input>
         </div>
     </div>
     <mat-divider></mat-divider>
