--- a/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
@@ -42,7 +42,10 @@
                 <span>(waiting for input)</span>
             </div>
             <div fxLayout="column" *ngIf="loading">
-                <mat-spinner [mode]="'indeterminate'" [diameter]="20"></mat-spinner>
+                <mat-spinner
+                        color="accent"
+                        [mode]="'indeterminate'"
+                        [diameter]="20"></mat-spinner>
             </div>
         </div>
     </div>
