--- a/ui/src/app/core-ui/static-properties/static-runtime-resolvable-tree-input/static-tree-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-runtime-resolvable-tree-input/static-tree-input.component.html
@@ -15,3 +15,40 @@
   ~ limitations under the License.
   ~
   -->
+
+<div [formGroup]="parentForm" id="formWrapper" fxFlex="100" fxLayout="column">
+    <div>
+        <button mat-button mat-raised-button color="accent" class="small-button"
+                (click)="loadOptionsFromRestApi()"
+                style="margin-right:10px;margin-left:10px;" [disabled]="!showOptions">
+            <span>Reload</span>
+        </button>
+    </div>
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sp-tree">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+            <mat-checkbox color="accent"
+                          [checked]="node.selected"
+                          (change)="toggleNodeSelection(node)">{{node.nodeName}}
+            </mat-checkbox>
+        </mat-tree-node>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+            <div class="mat-tree-node">
+                <button mat-icon-button matTreeNodeToggle
+                        [attr.aria-label]="'Toggle ' + node.nodeName">
+                    <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                    </mat-icon>
+                </button>
+                <mat-checkbox color="accent"
+                              [checked]="descendantsAllSelected(node)"
+                              [indeterminate]="descendantsPartiallySelected(node)"
+                              (change)="toggleAllNodeSelection(node)">{{node.nodeName}}
+                </mat-checkbox>
+            </div>
+            <div [class.sp-tree-invisible]="!treeControl.isExpanded(node)"
+                 role="group">
+                <ng-container matTreeNodeOutlet></ng-container>
+            </div>
+        </mat-nested-tree-node>
+    </mat-tree>
+</div>
